old java fix